# ComputacaoGrafica

./: CMakeLists.txt  GettingStarted.md  README.md  RESULT.md  Result.md
assets/: licenses.md
assets/scenes/: scene.toml
examples/: Hello3D.cpp
exercises/: cubes.cpp  fps.cpp  obj.cpp  paths.cpp  vivencial1.cpp
project/: README.md
project/shaders/: BaseFrag.frag  BaseVert.vert  DebugFrag.frag  DebugVert.vert
project/src/: CMakeLists.txt  main.cpp  main.h
project/src/lib/: CMakeLists.txt  Camera.cpp  Camera.hpp  DebugRenderer.cpp  DebugRenderer.hpp  GameObject.hpp  LightState.hpp  Material.hpp  ObjLoader.cpp  ObjLoader.hpp  PathAnimator.cpp  PathAnimator.hpp  Texture.cpp  Texture.hpp  VboHelper.cpp  VboHelper.hpp
project/src/shaders/: BaseShader.cpp  BaseShader.hpp  CMakeLists.txt
src/: 3lights.cpp  Hello3D.cpp  fps.cpp  main.cpp  obj.cpp  phong.cpp
